Add google-genai to requirements
Add google-genai for new API calls.

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
 # requirements.txt
 Flask
 python-telegram-bot
-requests # പുതിയ API കോളുകൾക്കായി ഇത് ചേർക്കുക
+google-genai # <-- ഈ ലൈൻ ചേർത്തോ?
 gunicorn
